--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "RESTfulBlogApp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sajid",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
